[Chromium] Incorrect resampling of clipped/masked images. https://bugs.webkit.org/show_bug.cgi?id=97409

Reviewed by Stephen White.

Source/WebCore:

Currently, high-quality resampling is used for translate/scale-only transforms, but when
the scale is negative the resampling subset ends up positioned incorrectly.
ImageSkia.cpp:drawResampledBitmap needs to account for negative scaling factors, and apply
only absolute values when calculating the resampling subregion in bitmap coordinates.

Thanks pdr@google.com for isolating the regression.

Test: svg/custom/clip-mask-negative-scale.svg

* platform/graphics/skia/ImageSkia.cpp:
(WebCore::drawResampledBitmap):

LayoutTests:

* platform/chromium-linux/svg/custom/clip-mask-negative-scale-expected.png: Added.
* platform/chromium-linux/svg/custom/clip-mask-negative-scale-expected.txt: Added.
* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* svg/custom/clip-mask-negative-scale.svg: Added.


Canonical link: https://commits.webkit.org/115904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129897 268f45cc-cd09-0410-ab3c-d52691b4dbfc